# libdbf

./: .cvsignore  Makefile.am  Makefile.in  README  autogen.sh  cli.c  cli.h  configure.in  csv.c  csv.h  dbf.c  dbf.h  libdbf.spec.in  sql.c  sql.h  statistic.c  statistic.h
debian/: changelog  control  copyright  rules
doc/: .cvsignore  Makefile.am
include/libdbf/: libdbf.h
man/: doxygen.conf
man/html/: annotated.html  classes.html  dbf_8h-source.html  dbf_8h.html  files.html  footer.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  header.html  index.html  main.html  standard.css  structDB__FIELD.html  structDB__HEADER.html  structDB__MEMO__BLOCK__TOP.html  structDB__MEMO__HEADER.html  structP__DBF-members.html  structP__DBF.html  tree.html
po/: .cvsignore  de.po
src/: .cvsignore  dbf.c  dbf.h  endian.c  endian.h  libdbf.h
